# JaRVIS-Bench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  scaffold.md
.claude/: settings.json
.claude/skills/analyze-batch/: SKILL.md
.jarvis/: GROWTH.md  IDENTITY.md
.jarvis/journal/: 2026-03-15-00-01.md
.jarvis/memories/: decisions.md  preferences.md
configs/: cross-model-subset.json
docker/: Dockerfile.runner
docs/: cross-model-runbook.md  grading-issues-2026-03-27.md  methodology.md  neurips-experiment-plan.md  nl2repo-integration.md
harness/: __init__.py  __main__.py  analyzer.py  config.py  docker.py  grader.py  reporter.py  runner.py
scripts/: analyze-results.py  audit-grades.py  run-eval.sh  select-subset.py  select-tasks.sh  setup.sh  visualize-leaderboard.py
