[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness*"]

[project]
name = "jarvis-bench"
version = "0.1.0"
description = "A/B benchmark: does JaRVIS reflection improve Claude Code on long-horizon coding tasks?"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]
